--- a/src/app/relic-card/relic-card.component.scss
+++ b/src/app/relic-card/relic-card.component.scss
@@ -67,77 +67,6 @@
         // transform: translateZ(0), scale(1, 1);
     }
 
-    .reverse-animation {
-        animation: onTopReverse 0.5s ease-in-out forwards;
-    }
-
-    // surely a shuffle animation will be easy, clueless
-    &:hover {
-        .back-card {
-            animation: onTop 0.5s ease-in-out forwards;
-        }
-    }
-
-    @keyframes onTop {
-        0% {
-            transform: translateY(0);
-            z-index: 1;
-            left: 0;
-            top: 0;
-            rotate: 0deg;
-        }
-
-        50% {
-            transform: translateY(-25px);
-            z-index: 1;
-            left: 11px;
-            top: 0;
-            rotate: 2.5deg;
-        }
-
-        100% {
-            transform: translateY(0);
-            z-index: 2;
-            left: 11px;
-            top: -7px;
-            rotate: 5deg;
-        }
-
-        // 100% {
-        //     transform: translateY(0);
-        //     z-index: 2;
-        //     left: 11px;
-        //     top: -7px;
-        //     rotate: 5deg;
-        // }
-    }
-
-    @keyframes onTopReverse {
-        0% {
-            transform: translateY(0);
-            z-index: 2;
-            left: 11px;
-            top: -7px;
-            rotate: 5deg;
-        }
-
-        50% {
-            transform: translateY(-25px);
-            z-index: 1;
-            left: 11px;
-            top: 0;
-            rotate: 2.5deg;
-        }
-
-        100% {
-            transform: translateY(0);
-            z-index: 1;
-            left: 0;
-            top: 0;
-            rotate: 0deg;
-        }
-    }
-
     .top-card,
     .back-card {
         background-size: cover;
